Alterando implementação do swagger.yml de swagger 2.0 para  OpenApi 3.0.3
