# src/main/java/com/rematec/voucher/voucherbackapi/models/requests/PerfilRequest.java
@@ -17,7 +17,6 @@ import java.util.List;
 @NoArgsConstructor
 public class PerfilRequest {
 
-    @NotNull(message = "Nome do Perfil é Obrigatorio")
     @NotBlank(message = "Nome do Perfil é Obrigatorio")
     private String nome;
     @NotNull(message = "Roles do Perfil é Obrigatorio")
