# src/main/resources/swagger.yml
@@ -1,25 +1,25 @@
-swagger: '2.0'
+openapi: 3.0.3
 info:
   title: VouckBack
   description: |-
     Microserviço para geração de voucher como descontos em valor ou percentual paras clientes em seu ponto de venda.
 
     _Se você que saber mais sobre a REMATEC, então  click [aqui](http://rematecvarejo.com.br). Aproveite e nos façam uma visita!_
-    
-    contact:
+
+  contact:
     email: mario7lagoas@gmail.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
-host: localhost:8080
-basePath: /voucher-back/v1
-schemes:
-  - http
-  - https
+
+servers:
+  - url: http://localhost:8080/voucher-back/v1
+
 
 tags:
   - name: Perfil
+    description: Operações sobre Perfil de Usuario
 paths:
   /perfil:
     get:
@@ -28,15 +28,37 @@ paths:
       summary: Buscando Lista de Perfil
       description: Buscando Lista de Perfil na Plataforma
       operationId: buscandoListaPerfil
-      produces:
-        - application/json
       responses:
         '200':
           description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/PerfilApiResponse'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PerfilApiResponse'
+    post:
+      tags:
+        - Perfil
+      summary: Criando Um Perfil
+      description: Criando Um Perfil na Plataforma
+      operationId: criandoPerfil
+      requestBody:
+        description: Criando novo Perfil
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PerfilApiRequest'
+        required: true
+      responses:
+        '201':
+          description: Created successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PerfilApiResponse'
+        '422':
+          description: unprocessable operation
   /perfil/resumido:
     get:
       tags:
@@ -44,15 +66,15 @@ paths:
       summary: Buscando Lista de Perfil Resumido
       description: Buscando Lista de Perfil Resumido na Plataforma
       operationId: buscandoListaResumidoPerfil
-      produces:
-        - application/json
       responses:
         '200':
           description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/PerfilResumidoApiResponse'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PerfilResumidoApiResponse'
   /perfil/{guid}:
     get:
       tags:
@@ -60,37 +82,22 @@ paths:
       summary: Buscando Perfil Pelo Perfil GUID
       description: Buscando Perfil Pelo Perfil GUID na Plataforma
       operationId: buscandoPerfilPeloGUID
-      produces:
-        - application/json
       parameters:
         - name: guid
           in: path
           description: Informe o GUID
           required: true
-          type: string
+          schema:
+            type: string
       responses:
         '200':
           description: successful operation
-          schema:
-            $ref: '#/definitions/PerfilApiResponse'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PerfilApiResponse'
         '404':
           description: not found operation
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
-                example: 404 NOT_FOUND
-              erros:
-                type: array
-                items:
-                  properties:
-                    codigo:
-                      type: string
-                      example: Não encontrado.
-                    mensagem:
-                      type: string
-                      example: Perfil não encontrado.
   /perfil/{nome}/nome:
     get:
       tags:
@@ -98,62 +105,63 @@ paths:
       summary: Buscando Perfil Pelo Perfil Nome
       description: Buscando Perfil Pelo Perfil Nome na Plataforma
       operationId: buscandoPerfilPeloNome
-      produces:
-        - application/json
       parameters:
         - name: nome
           in: path
           description: Nome do Perfil
           required: true
-          type: string
+          schema:
+            type: string
       responses:
         '200':
           description: successful operation
-          schema:
-            $ref: '#/definitions/PerfilApiResponse'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PerfilApiResponse'
         '404':
           description: not found operation
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
-                example: 404 NOT_FOUND
-              erros:
-                type: array
-                items:
-                  properties:
-                    codigo:
-                      type: string
-                      example: Não encontrado.
-                    mensagem:
-                      type: string
-                      example: Perfil não encontrado.
-definitions:
-  PerfilResumidoApiResponse:
-    type: object
-    properties:
-      guid:
-        type: string
-        example: aaaa-bbbb-cccc-dddd-eeeee
-      nome:
-        type: string
-        example: Moderator
-  PerfilApiResponse:
-    properties:
-      guid:
-        type: string
-        example: aaaa-bbbb-cccc-dddd-eeeee
-      nome:
-        type: string
-        example: Moderator
-      roles:
-        type: array
-        items:
-          $ref: '#/definitions/RoleApiResponse'
-  RoleApiResponse:
-    type: object
-    properties:
-      nome:
-        type: string
-        example: MENU_LOJA
+components:
+  schemas:
+    PerfilApiRequest:
+      required:
+        - nome
+        - roles
+      type: object
+      properties:
+        nome:
+          type: string
+          description: Nome do Perfil
+          example: Moderator
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/RoleApiResponse'
+    PerfilResumidoApiResponse:
+      type: object
+      properties:
+        guid:
+          type: string
+          example: aaaa-bbbb-cccc-dddd-eeeee
+        nome:
+          type: string
+          example: Moderator
+
+    PerfilApiResponse:
+      properties:
+        guid:
+          type: string
+          example: aaaa-bbbb-cccc-dddd-eeeee
+        nome:
+          type: string
+          example: Moderator
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/RoleApiResponse'
+    RoleApiResponse:
+      type: object
+      properties:
+        nome:
+          type: string
+          example: MENU_LOJA
